# pytest-revealtype-injector

./: README.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: format.yml  push_pr.yml  release.yml  typecheck_inc.yml
src/pytest_revealtype_injector/: __init__.py  hooks.py  main.py  models.py  plugin.py
src/pytest_revealtype_injector/_testutils/: rt_wrapper.py
src/pytest_revealtype_injector/adapter/: mypy_.py  pyright_.py
